--- a/blog.css
+++ b/blog.css
@@ -36,6 +36,7 @@
   text-align: center;
   font-family: 'Archivo Black', sans-serif !important;
   font-style: italic;
+  font-weight: bold;
 
 }
 .intro p{
@@ -224,14 +225,17 @@ span {
   text-decoration: none;
   color:white;
 }
+.logo{
+  width: 200px; 
+  height: auto; 
+  line-height: 5px; 
+  text-align: center
+}
 
 
 
 .display-4 {
   font-size: 2.5rem;
-}
-.background_img{
-  background-image: url('../img/backimg.png') !important;
 }
 
 
@@ -252,6 +256,7 @@ span {
 .remove_underline{
   text-decoration: none !important;
   font-family: 'Noto Sans', sans-serif;
+  font-size: 0.9rem;
   
 }
 .remove_underline:hover{
