--- a/blog.css
+++ b/blog.css
@@ -77,6 +77,7 @@ span.index {
 .first_row {
     margin-top: 0;
     font-family: 'Source Sans Pro', sans-serif !important;
+    font-size: 1.1rem;
 }
 
 .first_sec{
